--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     <input type="button" value="+" onclick="appendToDisplay('+')" >
                     <input type="button" value="00" onclick="appendToDisplay('00')" >
                     <input type="button" value="0" onclick="appendToDisplay('0')" >
+                    <input type="button" value="√" onclick="appendRoot('')" >
                     <input type="button" value="=" onclick="calculate('')" >
-
                 </div>
 
         </div>
